--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "test": "vitest"
     },
     "dependencies": {
+        "@mdi/js": "^7.1.96",
         "modern-normalize": "^1.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
