--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
         "test": "vitest"
     },
     "dependencies": {
+        "@hookform/resolvers": "^2.9.11",
         "@mdi/js": "^7.1.96",
+        "install": "^0.13.0",
         "modern-normalize": "^1.1.0",
+        "npm": "^9.6.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.8.2"
+        "react-hook-form": "^7.43.3",
+        "react-router-dom": "^6.8.2",
+        "yup": "^1.0.2"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^5.16.5",
